src/test/testFiles/invalid/semanticErrors/incorrectMethodName.manimdsl
let x = new Stack;
x.hello(5);